<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/booking_list_bg">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_56"
        android:background="@color/info_blue"
        app:menu="@menu/menu_landing_toolbar"
        app:title="@string/app_name"
        app:titleCentered="true"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/headerView"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_56"
        android:background="@drawable/bg_create_booking_header"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Bookings"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16"
        android:textStyle="bold"
        android:maxLines="2"
        app:layout_constraintTop_toTopOf="@id/headerView"
        app:layout_constraintBottom_toBottomOf="@id/headerView"
        app:layout_constraintStart_toStartOf="@id/headerView"
        app:layout_constraintEnd_toEndOf="@id/headerView" />

    <LinearLayout
        android:id="@+id/layoutBookingActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/space_12"
        app:layout_constraintTop_toBottomOf="@id/headerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout style="@style/PhoneBookingActionItem">

            <ImageButton
                android:id="@+id/btnCreateBooking"
                style="@style/BookingListIconButton"
                android:contentDescription="@string/create_booking"
                android:src="@drawable/ic_create_booking" />

            <TextView
                style="@style/PhoneBookingActionLabel"
                android:text="Create\nNew Booking" />

        </LinearLayout>

        <LinearLayout style="@style/PhoneBookingActionItem">

            <ImageButton
                android:id="@+id/btnFilter"
                style="@style/BookingListIconButton"
                android:contentDescription="@string/filter"
                android:src="@drawable/ic_filter" />

            <TextView
                style="@style/PhoneBookingActionLabel"
                android:text="Filter" />

        </LinearLayout>

        <LinearLayout style="@style/PhoneBookingActionItem">

            <ImageButton
                android:id="@+id/btnToggleStatus"
                style="@style/BookingStatusIconButton"
                android:contentDescription="@string/toggle_booking_status" />

            <TextView
                android:id="@+id/tvStatusToggleLabel"
                style="@style/PhoneBookingActionLabel"
                android:text="Active\nBookings" />

        </LinearLayout>

        <LinearLayout style="@style/PhoneBookingActionItem">

            <ImageButton
                android:id="@+id/btnClearFilter"
                style="@style/BookingListIconButton"
                android:contentDescription="@string/clear_filter"
                android:src="@drawable/ic_clear_filter" />

            <TextView
                style="@style/PhoneBookingActionLabel"
                android:text="Clear\nFilter" />

        </LinearLayout>

        <LinearLayout style="@style/PhoneBookingActionItem">

            <ImageButton
                android:id="@+id/btnToggleCompact"
                style="@style/BookingListIconButton"
                android:contentDescription="Switch booking view"
                android:src="@drawable/ic_compact_view" />

            <TextView
                android:id="@+id/tvCompactToggleLabel"
                style="@style/PhoneBookingActionLabel"
                android:text="Compact\nView" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:text="Loading..."
        android:textColor="@color/booking_list_message_text"
        android:textSize="@dimen/text_16"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/layoutBookingActions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layoutBookingActions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBookings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingStart="@dimen/space_4"
            android:paddingTop="@dimen/space_12"
            android:paddingEnd="@dimen/space_4"
            android:paddingBottom="@dimen/space_12"
            android:scrollbars="none" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
